// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor for a single conditional AppliesToFields matches snapshot 1`] = `
<div
  style={
    Object {
      "float": "left",
      "paddingLeft": "12px",
      "width": "288px",
    }
  }
>
  <h4
    style={
      Object {
        "borderBottom": "1px solid rgb(191, 191, 191)",
        "margin": "0px 0px 6px; padding: 0px 0px 6px",
      }
    }
  >
    applied-fields
  </h4>
  <p
    className="description"
  >
    select-apply-fields
  </p>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Number
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Dropdown
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Number 2
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Dropdown 2
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Next Page
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
  <label
    style={
      Object {
        "display": "block",
        "marginLeft": "20px",
      }
    }
  >
    Back
    <input
      checked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "-20px",
        }
      }
      type="checkbox"
      value="con_8761120514939434"
    />
  </label>
</div>
`;

exports[`Editor for a single conditional ConditionalLine with a checkbox field as value 1`] = `
<div
  className="caldera-condition-line condition-line-undefined"
>
  <span
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    If
  </span>
  <select
    className="condition-line-field"
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "120px",
        "verticalAlign": "inherit",
      }
    }
    value="fld_5216203"
  >
    <option />
    <optgroup>
      <option
        value="fld_1705245"
      >
        Number
         [
        number
        ]
      </option>
      <option
        value="fld_5216203"
      >
        Dropdown
         [
        dropdown
        ]
      </option>
      <option
        value="fld_8846716"
      >
        Number 2
         [
        number_2
        ]
      </option>
      <option
        value="fld_313720"
      >
        Dropdown 2
         [
        dropdown_2
        ]
      </option>
      <option
        value="fld_7100783"
      >
        Next Page
         [
        next_page
        ]
      </option>
      <option
        value="fld_5619974"
      >
        Back
         [
        back
        ]
      </option>
    </optgroup>
  </select>
  <select
    className="condition-line-compare"
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "120px",
        "verticalAlign": "inherit",
      }
    }
    value="greater"
  >
    <option
      value="is"
    >
      is
    </option>
    <option
      value="isnot"
    >
      isnot
    </option>
    <option
      value="greater"
    >
      greater
    </option>
    <option
      value="smaller"
    >
      smaller
    </option>
    <option
      value="startswith"
    >
      startswith
    </option>
    <option
      value="endswith"
    >
      endswith
    </option>
    <option
      value="contains"
    >
      contains
    </option>
  </select>
  <select
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "165px",
        "verticalAlign": "inherit",
      }
    }
    value="opt1184564"
  >
    <option />
    <option>
      Number
    </option>
    <option>
      Dropdown
    </option>
    <option>
      Number 2
    </option>
    <option>
      Dropdown 2
    </option>
    <option>
      Next Page
    </option>
    <option>
      Back
    </option>
  </select>
  <button
    className="button pull-right condition-line-remove"
    onClick={[Function]}
    type="button"
  >
    <i
      className="icon-join"
    />
  </button>
</div>
`;

exports[`Editor for a single conditional ConditionalLine with a number field as value 1`] = `
<div
  className="caldera-condition-line condition-line-undefined"
>
  <span
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    If
  </span>
  <select
    className="condition-line-field"
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "120px",
        "verticalAlign": "inherit",
      }
    }
    value="fld_1705245"
  >
    <option />
    <optgroup>
      <option
        value="fld_1705245"
      >
        Number
         [
        number
        ]
      </option>
      <option
        value="fld_5216203"
      >
        Dropdown
         [
        dropdown
        ]
      </option>
      <option
        value="fld_8846716"
      >
        Number 2
         [
        number_2
        ]
      </option>
      <option
        value="fld_313720"
      >
        Dropdown 2
         [
        dropdown_2
        ]
      </option>
      <option
        value="fld_7100783"
      >
        Next Page
         [
        next_page
        ]
      </option>
      <option
        value="fld_5619974"
      >
        Back
         [
        back
        ]
      </option>
    </optgroup>
  </select>
  <select
    className="condition-line-compare"
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "120px",
        "verticalAlign": "inherit",
      }
    }
    value="greater"
  >
    <option
      value="is"
    >
      is
    </option>
    <option
      value="isnot"
    >
      isnot
    </option>
    <option
      value="greater"
    >
      greater
    </option>
    <option
      value="smaller"
    >
      smaller
    </option>
    <option
      value="startswith"
    >
      startswith
    </option>
    <option
      value="endswith"
    >
      endswith
    </option>
    <option
      value="contains"
    >
      contains
    </option>
  </select>
  <select
    onChange={[Function]}
    style={
      Object {
        "maxWidth": "165px",
        "verticalAlign": "inherit",
      }
    }
    value="5"
  >
    <option />
    <option>
      Number
    </option>
    <option>
      Dropdown
    </option>
    <option>
      Number 2
    </option>
    <option>
      Dropdown 2
    </option>
    <option>
      Next Page
    </option>
    <option>
      Back
    </option>
  </select>
  <button
    className="button pull-right condition-line-remove"
    onClick={[Function]}
    type="button"
  >
    <i
      className="icon-join"
    />
  </button>
</div>
`;
